--- a/css/more.css
+++ b/css/more.css
@@ -17,6 +17,17 @@
 }
 
 #team .names .title {
-  font-size: 1em;
   font-weight: 100;
+}
+
+#team .names .twitter a {
+  font-weight: 100;
+  text-decoration: none;
+  color: white;
+  border-bottom: 1px dotted rgba(255,255,255,0.5); 
+  transition: border-bottom .1s linear;
+}
+
+#team .names .twitter a:hover {
+  border-bottom: 1px dotted rgba(255,255,255,0); 
 }
