--- a/css/more.css
+++ b/css/more.css
@@ -33,3 +33,8 @@
 #team .people .twitter a:hover {
   border-bottom: 1px dotted rgba(255,255,255,0); 
 }
+
+.yoicon {
+  height: 3em;
+  border-radius: 4px;
+}
