--- a/css/more.css
+++ b/css/more.css
@@ -54,5 +54,6 @@ margin-bottom: 10px;
   border-radius: 5px;
 }
 #InvestorsMentors .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name{
+  padding: 0;
   font-size: 15px;
 }
